# imgconv

./: .gitmodules  CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  image.cpp  image.h  imgconv.pro  imgconv.pro.user.16  imimage.cpp  imimage.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.json  resizefilter.cpp  run.py
docker/deploy/: Dockerfile
docker/devel/: Dockerfile
src/: CMakeLists.txt
src/base/: CMakeLists.txt  continuation.h  exception.h  log.h
src/im/: CMakeLists.txt  actionregistry.cpp  actionregistry.h  exceptioninfo.cpp  exceptioninfo.h  exportaction.cpp  exportaction.h  handle.h  image.cpp  image.h  imageaction.cpp  imageaction.h  imagefilter.h  imageformat.h  log.h  resizeaction.cpp  resizeaction.h  resizefilter.cpp  resizefilter.h
src/ui/: CMakeLists.txt  action.cpp  action.h  actionregistry.cpp  actionregistry.h  dialog.cpp  dialog.ui  exportaction.cpp  exportaction.h  exportaction.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipelineeditor.cpp  pipelineeditor.h  pipelineeditor.ui  resizeaction.cpp  resizeaction.h  resizeaction.ui
src/ui2/: CMakeLists.txt  Main.qml  MainForm.ui.qml  MessageBox.qml  PipelineEditor.qml  ResizeAction.qml  main.cpp  resources.qrc
